# Murphy-System

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitattributes  .gitignore  .murphy_keys.enc  .pre-commit-config.yaml  =3.2.0  API_DOCUMENTATION.md  API_ROUTES.md  ARCHITECTURE_MAP.md  ASSESSMENT_SUMMARY.md  AUDIT_PHASE_1_COMPLETION_SUMMARY.md  BUSINESS_MODEL.md  CHANGELOG.md  CHANGES_SUMMARY.md  CODE_OF_CONDUCT.md  COLLECTIVE_CHARTER.md  COMMISSIONING_CHECKLIST.md  CONTRIBUTING.md  DEPENDENCY_GRAPH.md  DEPLOYMENT_GUIDE.md  Dockerfile  FILE_CLASSIFICATION.md  GETTING_STARTED.md  LICENSE  LLM_SUBSYSTEM.md  MASTER_PROMPT.md  MODULE_INSTANCE_MANAGER_SPEC.md  MURPHY_1.0_COMPLETE_SUMMARY.md  MURPHY_1.0_QUICK_START.md  MURPHY_COMMISSIONING_TEST_PLAN.md  MURPHY_PRODUCTION_AUDIT.md  MURPHY_PRODUCTION_COMPLETE_SPEC.md  MURPHY_SELF_AUTOMATION_PLAN.md  MURPHY_STARTUP_FIX_PLAN.md  MURPHY_SYSTEM_1.0_SPECIFICATION.md  MURPHY_SYSTEM_NOW_RUNNING.md  PRODUCTION_READINESS_ASSESSMENT.md  (+359 more)
Murphy System/: .coverage  .coveragerc  .dockerignore  .env.example  .gitattributes  .gitignore  .murphy_keys.enc  =1.0.0  =2.2.0  AGENT_COMMUNICATION_ANALYSIS.txt  AGENT_COMMUNICATION_ARCHITECTURE.md  AGENT_COMMUNICATION_COMPLETE.md  AI_AGENT_COMMON_ERRORS_GUIDE.md  API_DOCUMENTATION.md  API_ROUTES.md  ARCHITECTURE_MAP.md  BOTS_ZIP_INVENTORY_MURPHY_3.md  BUGFIX_REPORT.md  BUSINESS_MODEL.md  CAPABILITY_GAP_ANALYSIS.md  CHANGELOG.md  CODE_OPTIMIZATION_PLAN.md  COMPLETE_MURPHY_SYSTEM_DELIVERY.md  COMPLETE_SYSTEM_INVENTORY.md  CONTRIBUTING.md  COOPERATIVE_SWARM_IMPLEMENTATION.md  CRITICAL_FIXES_SUMMARY.md  DEPENDENCY_GRAPH.md  DEPLOYMENT_GUIDE.md  Dockerfile  FEATURE_COMPARISON_ANALYSIS.md  FINAL_COMPLETION_REPORT.md  FINAL_DEMO_SUMMARY.md  FINAL_INTEGRATION_SUMMARY.md  FINAL_SYSTEM_DOCUMENTATION.md  FIX_PYTHON_313.bat  GETTING_STARTED.md  INITIALIZATION_TEST_COMPLETE.md  INSURANCE_RISK_GATES_COMPLETE.md  INTEGRATION_STATUS_REPORT.md  (+161 more)
Murphy System/.benchmarks/: README.md
Murphy System/.githooks/: pre-commit
Murphy System/alembic/: env.py
Murphy System/archive/: ARCHIVE_MANIFEST.md
Murphy System/archived_docs/: AI_AGENT_ERRORS_FIXED.md  APPROVAL_REQUEST_NAMING_FIXES.md  BOTS_ZIP_ARCHIVE_REFERENCE.md  CAPABILITY_GAP_ANALYSIS.md  COMMAND_SYSTEM_INTEGRATION_SUMMARY.md  COMPREHENSIVE_SCAN_REPORT.md  CRITICAL_ERRORS_FIX_REPORT.md  CRITICAL_FIXES_APPLIED.md  CRITICAL_FIX_APPLIED.md  CRITICAL_UI_SCAN_REPORT.md  CURRENT_SYSTEM_STATUS.md  FINAL_CRITICAL_ERROR_SCAN.md  FINAL_OPTIMIZATION_SUMMARY.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  FIX_IMPLEMENTATION_LOG.md  INTEGRATION_SUMMARY.md  LIBRARIAN_INTEGRATION_COMPLETE.md  LIBRARIAN_USER_GUIDE.md  MODULE_BASED_COMMANDS_IMPLEMENTATION.md  MODULE_SYSTEM_IMPLEMENTATION_SUMMARY.md  MURPHY_MODULE_COMMANDS.md  MURPHY_SYSTEM_LIVE_STATUS.md  MURPHY_SYSTEM_V2_IMPLEMENTATION_SUMMARY.md  NAMING_CONVENTION_ANALYSIS.md  NEXT_PRIORITY_READY.md  OPTION_A_UI_INTEGRATION_COMPLETE.md  OPTION_C_IMPLEMENTATION_COMPLETE.md  PANEL_INITIALIZATION_FIX.md  PHASE2_ARTIFACT_IMPLEMENTATION.md  PHASE3_IMPLEMENTATION_PLAN.md  PHASE4_AND_5_PROGRESS.md  PHASE4_IMPLEMENTATION_COMPLETE.md  PHASE4_SUMMARY.md  PRIORITY2_FINAL_REPORT.md  PRIORITY2_UI_BACKEND_SYNC.md  PRIORITY3_FINAL_SUMMARY.md  SESSION_SUMMARY.md  STATUS_CHECK.md  SYNTAX_FIXES_COMPLETE.md  (+9 more)
Murphy System/artifacts/: d3ae1aac-ed29-4ea7-9a52-9ef9e4112502.py
Murphy System/bots/: Engineering_bot.py  Ghost_Controller_Bot.py  README.md  __init__.py  analysisbot.py  bot_base.py  cad_bot.py  clarifier_bot.py  commissioning_bot.py  dashboard.py  efficiency_optimizer.py  feedback_bot.py  graph_architect_bot.py  hive_pipelines.py  input_parser.py  json_streamed_logic.py  key_manager_bot.py  librarian_bot.py  matrix_bot.py  matrix_config.py  matrix_formatters.py  matrix_hitl.py  matrix_notifications.py  memory_manager_bot.py  memory_manager_ttl.py  optimization_bot.py  policy_trainer_bot.py  progress.py  rl_training.py  rubixcube_bot.py  run_matrix_bot.py  scaling_bot.py  scheduler_bot.py  simulation_bot.py  swisskiss_loader.py  tool_dispatcher.py  visualization_bot.py
Murphy System/cloudflare/: README.md  package-lock.json  package.json  setup.sh  wrangler.toml
Murphy System/config/: __init__.py  config_loader.py  engines.yaml  engines.yaml.example  murphy-production.environment.example  murphy.yaml  murphy.yaml.example
Murphy System/dashboard/: monitoring_dashboard.html  security_dashboard.html
Murphy System/database/: add_monitoring_tables.sql  add_tasks_config.sql  add_tasks_config_simple.sql  insert_test_lead.sql
Murphy System/deploy/: oauth-setup.md
Murphy System/docs/: AIONMIND_FRONT_DOOR.md  API_REFERENCE.md  AUDIT_AND_COMPLETION_REPORT.md  CASE_STUDY_LESSONS_LEARNED.md  CAUSALITY_SANDBOX.md  CEO_AUTONOMOUS_OPERATIONS.md  COMPREHENSIVE_TESTING_STRATEGY.md  CONFIGURATION.md  DECLARATIVE_FLEET_MANAGER.md  DEPLOYMENT_GUIDE.md  DESIGN_SYSTEM.md  DISPATCH_INTEGRATION_MAP.md  EXECUTION_LOG.md  EXPERIMENTAL_EVERQUEST_MODIFICATION_PLAN.md  FLATTENING_PLAN.md  FORGE_EVALUATION_REPORT.md  FOUNDER_UPDATE_ENGINE.md  GAP_ANALYSIS.md  GAP_CLOSURE.md  GRANT_DATABASE_SCHEMA.md  IMMUNE_ENGINE.md  K8S_PRODUCTION_HARDENING.md  LAUNCH_AUTOMATION_PLAN.md  LIBRARIAN_ROUTING_SPEC.md  MANUAL_COMMISSIONING_TEST_PLAN.md  MODULE_INTEGRATION_MAP.md  MODULE_REGISTRY.md  MONITORING.md  MURPHY_CODE_HEALER.md  MURPHY_GRANT_STRATEGY.md  MURPHY_SYSTEM_COMPLETION_MASTER_PROMPT.md  MURPHY_SYSTEM_SPECIFICATIONS_GAP_ANALYSIS_COMPLETION_ROADMAP.md  MURPHY_SYSTEM_STORYLINE.md  OPENCLAW_MOLTY_SOUL_CONCEPT.md  OPERATIONS_MANUAL.md  OPERATIONS_TESTING_PLAN.md  OUTREACH_COMPLIANCE_POLICY.md  PRODUCTION_CHECKLIST.md  QA_AUDIT_REPORT.md  RACE_CULTURAL_IDENTITY_DESIGN.md  (+17 more)
Murphy System/documentation/: README.md
Murphy System/fleet_manifests/: default_fleet.yaml
Murphy System/k8s/: backup-cronjob.yaml  configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  network-policy.yaml  pdb.yaml  postgres.yaml  redis.yaml  resource-quota.yaml  secret.yaml
Murphy System/mobile/: api.py  models.py
Murphy System/modules/: audit.json  module.yaml
(+11209 files in other folders)
