[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "murphy-system"
version = "1.0.0"
description = "Murphy System — AI-powered business automation platform"
readme = "README.md"
license = {text = "BSL-1.1"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.scripts]
# PROD-HARD-J3 (audit J3): the previous target "murphy_cli.main:main" was
# broken at install time — `murphy_cli` is not installed as a top-level
# package (it lives at src/murphy_cli/ and is reached via the `src` package
# or sys.path injection at test / entrypoint time, not via package-dir
# remapping). `pip install . && murphy` therefore raised ModuleNotFoundError.
# src.runtime.app.main exists (src/runtime/app.py:15762) and matches the
# target already declared in setup.py, so both build paths now agree.
murphy = "src.runtime.app:main"

[project.optional-dependencies]
llm = ["httpx>=0.24.0", "openai>=1.0"]
security = ["cryptography>=41.0", "PyJWT>=2.8"]
terminal = ["textual>=0.40", "pywin32; sys_platform == 'win32'"]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "mypy"]
all = ["murphy-system[llm,security,terminal,dev]"]

[tool.setuptools.packages.find]
# PROD-HARD-J3 (audit J3): dropped dead "murphy_cli" / "murphy_cli.*"
# entries — those patterns resolve against where=["."], but there is no
# root-level ./murphy_cli/ directory, so they matched nothing. The
# src-layout package is picked up via the "src" / "src.*" patterns.
where = ["."]
include = ["src", "src.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Add the project root, src/, and strategic/ to sys.path so all import styles
# work without sys.path hacks in individual test files.
pythonpath = [".", "src", "strategic"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestCollectionWarning",
]
# INC-14 / M-05: Coverage is opt-in via CI workflow (--cov flags), not
# forced in addopts — pytest-cov may not be installed in all environments
# (benchmarks, gap-detector, e2e runners).  To run locally with coverage:
#   pytest --cov=rosetta_subsystem_wiring --cov=startup_feature_summary \
#          --cov-fail-under=80 --cov-report=term-missing
markers = [
    "sla: SLA enforcement tests that gate production releases",
    "benchmark: Performance benchmark tests",
    "storyline: Storyline conformance tests — validates each chapter maps to working code",
    "parity: Management Systems parity acceptance tests (phases 2–8)",
    "hero_flow: End-to-end Describe→Generate→Execute→Refine hero path integration tests",
    "automation: Automation engine and workflow scheduling tests",
    "compliance: Audit, compliance, and security hardening tests",
    "llm: LLM provider integration and routing tests",
    "execution: Execution engine, orchestration, and swarm tests",
    "agents: Agent system, multi-agent coordination, and CI agent tests",
    "communication: Communication hub, Matrix bridge, and email tests",
    "ui_frontend: UI, dashboard, terminal, and frontend wiring tests",
    "finance: Billing, grants, trading, and financial reporting tests",
    "devops: CI/CD, deployment, containerization, and infrastructure tests",
    "bots: Bot framework, governance, and telemetry tests",
    "governance: Governance framework, authority gates, and policy tests",
    "industrial: Robotics, building automation, and energy management tests",
    "onboarding: Onboarding flow, commissioning, and platform setup tests",
    "crm_sales: CRM, sales, marketing, and customer lifecycle tests",
    "runtime_core: Core runtime, boot, heartbeat, librarian, and rosetta tests",
    "data_persistence: Database, migration, schema, and data pipeline tests",
    "game_creative: EQ game systems, creative engine, and storyline tests",
    "org_management: Organization, team, founder, and management tests",
    "integration_connector: Connector, adapter, bridge, and API integration tests",
    "learning_analytics: ML, analytics, telemetry, and learning engine tests",
    "workflow_task: Workflow DAG, task pipeline, and process tests",
    "document_export: Document generation, PDF, cutsheet, and export tests",
    "platform_config: Configuration, feature flags, and environment tests",
    "scheduling: Scheduler, planning, and capacity tests",
    "notification_alert: Notification, alert, voice, and announcement tests",
    "account_auth: Account, tenant, subscription, and credential tests",
    "auar: Automated User Acceptance Review tests",
    "competitive: Competitive intelligence and alignment tests",
    "content_media: Content creation, video, YouTube, and social media tests",
    "cost_economics: Cost optimization, budget, and unit economics tests",
    "digital_twin: Digital twin and fleet management tests",
    "documentation_qa: Documentation completeness, gap closure, and surface tests",
    "hardening: Code hardening, quality, and deficiency fix tests",
    "resilience: Chaos, resilience, repair, and recovery tests",
    "submission_ticketing: Submission, ticketing, and triage adapter tests",
    "testing_meta: Test mode controller and test vector generator tests",
    "wiring_validation: Cross-module wiring, structural audit, and parity tests",
    "modules: Core module unit tests — individual Murphy System modules",
    # PROD-HARD-TEST-001 (audit D7–D10): register marks that were emitting
    # PytestUnknownMarkWarning on every run because they were used in tests
    # but never declared.
    "e2e: End-to-end tests — exercise full request paths without external secrets",
    "slow: Tests intentionally allowed to run > a few seconds; gate with -m 'not slow' on PR runs",
    "integration: Cross-module integration tests gated to nightly / e2e jobs",
    # PROD-HARD-TEST-002 (audit D12): explicit marker replaces the brittle
    # `-k "not test_actual_local_llm"` string-match used in 5 workflows.
    # The marker survives test renames; the -k workaround would silently
    # re-enable the test on rename and break CI on machines without an LLM.
    "local_llm: Heavy real-LLM integration tests; require a local LLM runtime — gated off PR runs with -m 'not local_llm'",
]
# PROD-HARD-TEST-001 (audit D22): pytest-timeout is invoked via --timeout in
# every CI workflow; declare it as required so a fresh dev env fails fast
# with a clear message instead of "unrecognized arguments: --timeout".
required_plugins = ["pytest-asyncio", "pytest-timeout"]
# Default per-test timeout: ~5 s per 1 000 lines of tested source.
# Tests that target very large modules (app.py = 6 293 lines, compute_plane = 2 877 lines)
# carry per-file @pytest.mark.timeout() overrides; this default covers the majority.

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
]
# Note: S (flake8-bandit) removed — security linting handled by dedicated
# bandit CI job with project-specific bandit.yaml configuration.
# T20 (flake8-print) removed — print() is used in CLI entry points and
# debug tooling across the 920+ module surface area.
ignore = [
    "E402",  # module-level import not at top of file (try/except import pattern used across 24+ modules)
    "E501",  # line too long (handled by formatter)
    "E701",  # multiple statements on one line (colon)
    "E702",  # multiple statements on one line (semicolon)
    "E714",  # test for object identity should be 'is not'
    "E741",  # ambiguous variable name (single-letter vars in math/physics code)
    "F401",  # imported but unused (intentional re-exports and conditional imports)
    "F811",  # redefinition of unused name (overload/conditional patterns)
    "F821",  # undefined name (forward references, typing annotations without runtime imports)
    "F841",  # local variable assigned but never used
    "B007",  # loop control variable not used within loop body
    "B008",  # function call in default argument value
    "B027",  # empty method in abstract base class (interface stubs)
    "B904",  # within except clause, raise exceptions with raise ... from err
    "B905",  # zip() without an explicit strict= parameter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"src/setup_wizard.py" = ["T201"]  # CLI entry point uses print()
