[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "murphy-system"
version = "1.0.0"
description = "Murphy System — AI-powered business automation platform"
readme = "README.md"
license = {text = "BSL-1.1"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.optional-dependencies]
llm = ["groq>=0.4.0", "openai>=1.0"]
security = ["cryptography>=41.0", "PyJWT>=2.8"]
terminal = ["textual>=0.40", "pywin32; sys_platform == 'win32'"]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "mypy"]
all = ["murphy-system[llm,security,terminal,dev]"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = "--cov=src --cov-fail-under=85 --cov-report=term-missing"
markers = [
    "sla: SLA enforcement tests that gate production releases",
    "benchmark: Performance benchmark tests",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "S",   # flake8-bandit
    "T20", # flake8-print
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # use of assert (OK in tests)
    "S603",  # subprocess without shell=True check
    "S607",  # partial executable path
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "T201"]
"src/setup_wizard.py" = ["T201"]  # CLI entry point uses print()
