[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "murphy-system"
version = "1.0.0"
description = "Murphy System — AI-powered business automation platform"
readme = "README.md"
license = {text = "BSL-1.1"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.optional-dependencies]
llm = ["httpx>=0.24.0", "openai>=1.0"]
security = ["cryptography>=41.0", "PyJWT>=2.8"]
terminal = ["textual>=0.40", "pywin32; sys_platform == 'win32'"]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "mypy"]
all = ["murphy-system[llm,security,terminal,dev]"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Add the project root, src/, and strategic/ to sys.path so all import styles
# work without sys.path hacks in individual test files.
pythonpath = [".", "src", "strategic"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestCollectionWarning",
]
# INC-14 / M-05: Coverage is opt-in via CI workflow (--cov flags), not
# forced in addopts — pytest-cov may not be installed in all environments
# (benchmarks, gap-detector, e2e runners).  To run locally with coverage:
#   pytest --cov=rosetta_subsystem_wiring --cov=startup_feature_summary \
#          --cov-fail-under=80 --cov-report=term-missing
markers = [
    "sla: SLA enforcement tests that gate production releases",
    "benchmark: Performance benchmark tests",
    "storyline: Storyline conformance tests — validates each chapter maps to working code",
    "parity: Management Systems parity acceptance tests (phases 2–8)",
    "hero_flow: End-to-end Describe→Generate→Execute→Refine hero path integration tests",
    "automation: Automation engine and workflow scheduling tests",
    "compliance: Audit, compliance, and security hardening tests",
    "llm: LLM provider integration and routing tests",
    "execution: Execution engine, orchestration, and swarm tests",
    "agents: Agent system, multi-agent coordination, and CI agent tests",
    "communication: Communication hub, Matrix bridge, and email tests",
    "ui_frontend: UI, dashboard, terminal, and frontend wiring tests",
    "finance: Billing, grants, trading, and financial reporting tests",
    "devops: CI/CD, deployment, containerization, and infrastructure tests",
    "bots: Bot framework, governance, and telemetry tests",
    "governance: Governance framework, authority gates, and policy tests",
    "industrial: Robotics, building automation, and energy management tests",
    "onboarding: Onboarding flow, commissioning, and platform setup tests",
    "crm_sales: CRM, sales, marketing, and customer lifecycle tests",
    "runtime_core: Core runtime, boot, heartbeat, librarian, and rosetta tests",
    "data_persistence: Database, migration, schema, and data pipeline tests",
    "game_creative: EQ game systems, creative engine, and storyline tests",
    "org_management: Organization, team, founder, and management tests",
    "integration_connector: Connector, adapter, bridge, and API integration tests",
    "learning_analytics: ML, analytics, telemetry, and learning engine tests",
    "workflow_task: Workflow DAG, task pipeline, and process tests",
    "document_export: Document generation, PDF, cutsheet, and export tests",
    "platform_config: Configuration, feature flags, and environment tests",
    "scheduling: Scheduler, planning, and capacity tests",
    "notification_alert: Notification, alert, voice, and announcement tests",
]
# Default per-test timeout: ~5 s per 1 000 lines of tested source.
# Tests that target very large modules (app.py = 6 293 lines, compute_plane = 2 877 lines)
# carry per-file @pytest.mark.timeout() overrides; this default covers the majority.

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
]
# Note: S (flake8-bandit) removed — security linting handled by dedicated
# bandit CI job with project-specific bandit.yaml configuration.
# T20 (flake8-print) removed — print() is used in CLI entry points and
# debug tooling across the 920+ module surface area.
ignore = [
    "E402",  # module-level import not at top of file (try/except import pattern used across 24+ modules)
    "E501",  # line too long (handled by formatter)
    "E701",  # multiple statements on one line (colon)
    "E702",  # multiple statements on one line (semicolon)
    "E714",  # test for object identity should be 'is not'
    "E741",  # ambiguous variable name (single-letter vars in math/physics code)
    "F401",  # imported but unused (intentional re-exports and conditional imports)
    "F811",  # redefinition of unused name (overload/conditional patterns)
    "F821",  # undefined name (forward references, typing annotations without runtime imports)
    "F841",  # local variable assigned but never used
    "B007",  # loop control variable not used within loop body
    "B008",  # function call in default argument value
    "B027",  # empty method in abstract base class (interface stubs)
    "B904",  # within except clause, raise exceptions with raise ... from err
    "B905",  # zip() without an explicit strict= parameter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"src/setup_wizard.py" = ["T201"]  # CLI entry point uses print()
