[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "murphy-event-backbone"
version = "0.1.0"
description = "Durable in-process event bus with pub/sub, circuit breakers, DLQ, and retry. Zero dependencies."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    { name = "Corey Post", email = "murphysystem@proton.me" },
]
keywords = [
    "event-bus", "pub-sub", "circuit-breaker", "dead-letter-queue",
    "retry", "event-driven", "ai-agents", "message-queue",
    "backpressure", "idempotent",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/IKNOWINOT/murphy-event-backbone"
Repository = "https://github.com/IKNOWINOT/murphy-event-backbone"
Issues = "https://github.com/IKNOWINOT/murphy-event-backbone/issues"
"Part of" = "https://github.com/IKNOWINOT/Murphy-System"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
